--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name='keywords' content='WebRTC, HTML5, JavaScript' />
 <meta name='description' content='WebRTC Reference App' />
 <meta name='viewport' content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1'>
+    <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"> </script>
 
 <base target='_blank'>
 
@@ -22,6 +23,7 @@
     <video id='localVideo' autoplay muted></video>
     <video id='remoteVideo' autoplay></video>
   </div>
+    <button id="start-recording">Start Recording</button>
 
 </div>
 
