--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 
 <!-- <link rel='stylesheet' href='css/main.css' /> -->
 
-    <style type='text/css'>
-        ul { list-style: none; }
-        #recordingslist audio { display: block; margin-bottom: 10px; }
-    </style>
+<script src="https://www.webrtc-experiment.com/RecordRTC.js"> </script>
 
 </head>
 
@@ -27,96 +24,110 @@
     <video id='localVideo' autoplay muted></video>
     <video id='remoteVideo' autoplay></video>
   </div>
-    <button onclick="startRecording(this);">record</button>
-    <button onclick="stopRecording(this);" disabled>stop</button>
 
-    <h2>Recordings</h2>
-    <ul id="recordingslist"></ul>
+    <h2 class="header">Record Audio</h2>
 
-    <h2>Log</h2>
-    <pre id="log"></pre>
+    <div class="inner">
+        <audio id="audio" autoplay loop controls></audio>
+        <button id="record-audio">Record</button>
+        <button id="stop-recording-audio" disabled>Stop</button>
+        <h2 id="audio-url-preview"></h2>
+    </div>
+
 </div>
 
 <script src='/socket.io/socket.io.js'></script>
 <script src='js/main.js'></script>
-
 <script>
-    function __log(e, data) {
-        log.innerHTML += "\n" + e + " " + (data || '');
+    function getByID(id) {
+        return document.getElementById(id);
     }
 
-    var audio_context;
+    var recordAudio = getByID('record-audio'),
+            recordVideo = getByID('record-video'),
+            recordGIF = getByID('record-gif'),
+            stopRecordingAudio = getByID('stop-recording-audio'),
+            stopRecordingVideo = getByID('stop-recording-video'),
+            stopRecordingGIF = getByID('stop-recording-gif');
+
+    var videoWidth_input = getByID('video-width-input'),
+            videoHeight_input = getByID('video-height-input');
+
+    var canvasWidth_input = getByID('canvas-width-input'),
+            canvasHeight_input = getByID('canvas-height-input');
+
+    var video = getByID('video');
+    var audio = getByID('audio');
+
+    var videoConstraints = {
+        audio: false,
+        video: {
+            mandatory: { },
+            optional: []
+        }
+    };
+
+    var audioConstraints = {
+        audio: true,
+        video: false
+    };
+
+</script>
+<script>
+    var audioStream;
     var recorder;
 
-    function startUserMedia(stream) {
-        var input = audio_context.createMediaStreamSource(stream);
-        __log('Media stream created.');
+    recordAudio.onclick = function() {
+        if (!audioStream)
+            navigator.getUserMedia(audioConstraints, function(stream) {
+                if (window.IsChrome) stream = new window.MediaStream(stream.getAudioTracks());
+                audioStream = stream;
 
-        input.connect(audio_context.destination);
-        __log('Input connected to audio context destination.');
+                audio.src = URL.createObjectURL(audioStream);
+                audio.play();
 
-        recorder = new Recorder(input);
-        __log('Recorder initialised.');
-    }
-
-    function startRecording(button) {
-        recorder && recorder.record();
-        button.disabled = true;
-        button.nextElementSibling.disabled = false;
-        __log('Recording...');
-    }
-
-    function stopRecording(button) {
-        recorder && recorder.stop();
-        button.disabled = true;
-        button.previousElementSibling.disabled = false;
-        __log('Stopped recording.');
-
-        // create WAV download link using audio data blob
-        createDownloadLink();
-
-        recorder.clear();
-    }
-
-    function createDownloadLink() {
-        recorder && recorder.exportWAV(function(blob) {
-            var url = URL.createObjectURL(blob);
-            var li = document.createElement('li');
-            var au = document.createElement('audio');
-            var hf = document.createElement('a');
-
-            au.controls = true;
-            au.src = url;
-            hf.href = url;
-            hf.download = new Date().toISOString() + '.wav';
-            hf.innerHTML = hf.download;
-            li.appendChild(au);
-            li.appendChild(hf);
-            recordingslist.appendChild(li);
-        });
-    }
-
-    window.onload = function init() {
-        try {
-            // webkit shim
-            window.AudioContext = window.AudioContext || window.webkitAudioContext;
-            navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia;
-            window.URL = window.URL || window.webkitURL;
-
-            audio_context = new AudioContext;
-            __log('Audio context set up.');
-            __log('navigator.getUserMedia ' + (navigator.getUserMedia ? 'available.' : 'not present!'));
-        } catch (e) {
-            alert('No web audio support in this browser!');
+                // "audio" is a default type
+                recorder = window.RecordRTC(stream, {
+                    type: 'audio'
+                });
+                recorder.startRecording();
+            }, function() {
+            });
+        else {
+            audio.src = URL.createObjectURL(audioStream);
+            audio.play();
+            if (recorder) recorder.startRecording();
         }
 
-        navigator.getUserMedia({audio: true}, startUserMedia, function(e) {
-            __log('No live audio input: ' + e);
-        });
+        window.isAudio = true;
+
+        this.disabled = true;
+        stopRecordingAudio.disabled = false;
     };
+
+    var screen_constraints;
+
+    function isCaptureScreen() {
+        if (document.getElementById('record-screen').checked) {
+            screen_constraints = {
+                mandatory: { chromeMediaSource: 'screen' },
+                optional: []
+            };
+            videoConstraints.video = screen_constraints;
+        }
+    }
+
+    stopRecordingAudio.onclick = function() {
+        this.disabled = true;
+        recordAudio.disabled = false;
+        audio.src = '';
+
+        if (recorder)
+            recorder.stopRecording(function(url) {
+                document.getElementById('audio-url-preview').innerHTML = '<a href="' + url + '" target="_blank">Recorded Audio URL</a>';
+            });
+    };
+
 </script>
-
-<script src="recorder.js"></script>
-
 </body>
 </html>
