--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   </div>
 
 </div>
-
+<script>
+    
+</script>
 <script src='/socket.io/socket.io.js'></script>
 <script src='js/main.js'></script>
 
