--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
 
         <title>WebRTC client</title>
 
+        <link href="style.css" rel="stylesheet" type="text/css">
         <link href="bootstrap.min.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
 
-    <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+    <div class="conferenceNameForm">
+        <form class="navbar-form navbar-left" action="conference.html" method="GET">
+            <div class="form-group">
+                <input id="roomName" name="r" type="text" class="form-control" placeholder="Name the conference">
+            </div>
+            <button type="submit" class="btn btn-primary openConference">Open it</button>
+        </form>
+    </div>
 
+    <script>
+
+    </script>
     </body>
 </html>
