--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
 
     <div class="conferenceNameForm">
-        <form class="navbar-form navbar-left">
+        <form class="navbar-form navbar-left" method="GET">
             <div class="form-group">
                 <input id="roomName" name="r" type="text" class="form-control" placeholder="Name the conference">
             </div>
