--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <script>
         $( "#submitForm" ).click(function() {
+            var f = document.getElementById('form');
             f.action = 'conference.html';
             f.target='_self';
             f.submit();
