--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <input id="roomName" name="r" type="text" class="form-control" placeholder="Name the conference">
             </div>
-            <button id="submitForm" type="button" class="btn btn-primary openConference">Open it</button>
+            <button type="submit" class="btn btn-primary openConference">Open it</button>
         </form>
     </div>
     </body>
