--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body>
     <div class="conferenceNameForm">
-        <form class="navbar-form navbar-left" method="GET" action="conference.html">
+        <form class="navbar-form navbar-left" method="GET" action="conference.html" target="_self">
             <div class="form-group">
                 <input id="roomName" name="r" type="text" class="form-control" placeholder="Name the conference">
             </div>
