--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <body>
         <div class="conferenceNameForm">
+            <div class="accentureLogoForm">
+                <img src="FS_logo_main@2x.png"/>
+            </div>
             <form class="navbar-form navbar-left" method="GET" action="conference.html" target="_self">
                 <div class="form-group">
                     <input id="roomName" name="r" type="text" class="form-control" placeholder="Name the conference">
